add del list
